[package]
name = "spotcord"
version = "0.1.0"
authors = ["Daniel P <daniel@pont.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { git = "https://github.com/daniel-tp/rspotify.git" }
chrono = "0.4"
regex = "1"
lazy_static = "1"
serenity = "0.7"
dotenv_codegen = "0.15.0"