[package]
name = "spotcord"
version = "0.1.0"
authors = ["Daniel P <daniel@pont.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = "0.10"
regex = "1"
lazy_static = "1"
serenity = { version = "0.9", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
dotenv = "0.15"
tokio = { version = "0.2", features = ["macros"] }
anyhow = "1"